resources/css/main.css
body {
    background-color: steelblue;
    font-family: sans-serif;
    font-size: 2vmin;
}

div {
    font-size: 2vmin;
}

i {
    padding: 0px 10px 0px 10px;
}

.navbar {
  height: 5vh;
}

.column {
    height: 95vh;
    text-align: center;
    float: left;
    width: 33.33%;
}

#overlaytext {
  color: whitesmoke;
}

.highlightwhitefrom {
  background-color: rgb(106, 192, 57,0.5);
}
.highlightwhiteto {
  background-color:rgb(106, 192, 57,0.5);
}

.highlightblackfrom {
  background-color: rgb(82, 138, 19,0.7);
}
.highlightblackto {
  background-color: rgb(82, 138, 19,0.7);
}


table {
    width: 100%;
  border-spacing: 0;

}
th {
    width:20%
}

.moveno {
    width: 3%
}

.endcol {
    width: 3%
}

.even {
    background-color: rgb(181, 136, 99);
}

.odd {
    background-color: rgb(240, 217, 181);
}

.highlighted {
    background-color: grey; 
}

.description {
  font-style: italic;
}

.thoughtchoice {
  float: left;
  border-style: solid;
  border-width: 1px;
  padding: 1%;
}

.tableHeader {
  float: none;
  padding: 1%;
  border-style: solid;
}


  ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
  }
  
  li {
    float: left;
  }
  
  li a {
    display: block;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
  }
  
  /* Change the link color to #111 (black) on hover */
  li a:hover {
    color: black;
  }

  #boardContainer {
    position: relative;
  }
  
  #boardInfo {
    background-color: rgba(70,130,180, 0.9);
    z-index: 1;
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
  }

  #controls {
    display: none;
  }

